--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jest": "^27.4.3"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.16.4",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
